practica5/src/y.output
State 86 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: cabecera_programa bloque

    2 cabecera_programa: PRINCIPAL PARIZQ PARDER

    3 inicio_bloque: LLAVEIZQ

    4 bloque: inicio_bloque declar_de_variables_locales declar_procedimientos sentencias LLAVEDER
    5       | inicio_bloque declar_de_variables_locales sentencias LLAVEDER

    6 lista_parametros: lista_parametros COMA parametro
    7                 | parametro

    8 lista_para_por_defecto: lista_para_por_defecto COMA parametro IGUAL CONSTANTE
    9                       | parametro IGUAL CONSTANTE
   10                       | lista_para_por_defecto COMA parametro IGUAL agregado_lista
   11                       | parametro IGUAL agregado_lista

   12 parametro: tipos ID

   13 declar_de_variables_locales: INICIOVAR variables_locales FINVAR
   14                            | /* empty */

   15 variables_locales: variables_locales cuerpo_declar_variables
   16                  | cuerpo_declar_variables

   17 cuerpo_declar_variables: tipos declar_variables PYC
   18                        | error

   19 declar_variables: ID
   20                 | ID IGUAL expresion
   21                 | declar_variables COMA ID
   22                 | declar_variables COMA ID IGUAL expresion

   23 declar_procedimientos: declar_procedimientos declar_proced
   24                      | declar_proced

   25 declar_proced: cabecera_proced bloque

   26 inicio_cabe_proced: PROCEDIMIENTO ID

   27 cabecera_proced: inicio_cabe_proced PARIZQ lista_parametros COMA lista_para_por_defecto PARDER
   28                | inicio_cabe_proced PARIZQ lista_parametros PARDER
   29                | inicio_cabe_proced PARIZQ PARDER
   30                | error

   31 sentencias: sentencias sentencia
   32           | sentencia

   33 cabecera_for: PARA sentencia_asignacion HASTA expresion

   34 sentencia: bloque
   35          | sentencia_asignacion
   36          | sentencia_if
   37          | MIENTRAS PARIZQ expresion PARDER sentencia
   38          | cabecera_for ITERANDO expresion HACER sentencia
   39          | LEER lista_identificadores PYC
   40          | IMPRIMIR mensajes PYC
   41          | llamada_proced
   42          | expresion MOV_LISTA PYC
   43          | DOLLAR expresion PYC

   44 sentencia_asignacion: ID IGUAL expresion PYC

   45 cabecera_if: SI PARIZQ expresion PARDER

   46 sentencia_if: cabecera_if sentencia
   47             | cabecera_if sentencia OTROCASO sentencia

   48 lista_identificadores: lista_identificadores COMA ID
   49                      | ID

   50 mensajes: mensajes COMA mensaje
   51         | mensaje

   52 mensaje: expresion
   53        | CADENA

   54 inicio_llamada: ID PARIZQ

   55 llamada_proced: inicio_llamada lista_expresiones PARDER PYC
   56               | inicio_llamada PARDER PYC

   57 lista_expresiones: lista_expresiones COMA expresion
   58                  | expresion

   59 expresion: PARIZQ expresion PARDER
   60          | DECRE_PRE expresion
   61          | INCRE_PRE expresion
   62          | NOT expresion
   63          | UNARIO_PRE_LISTA expresion
   64          | ADITIVOS expresion
   65          | expresion ADITIVOS expresion
   66          | expresion DECRE_PRE expresion
   67          | expresion ELEM_POSI expresion
   68          | expresion MULTIPLICATIVOS expresion
   69          | expresion POTENCIAS expresion
   70          | expresion IGUALDAD expresion
   71          | expresion RELACION expresion
   72          | expresion OR expresion
   73          | expresion AND expresion
   74          | expresion XOR expresion
   75          | expresion INCRE_PRE expresion ELEM_POSI expresion
   76          | ID
   77          | agregado_lista
   78          | CONSTANTE
   79          | error

   80 agregado_lista: CORCHIZQ lista_expresiones CORCHDER

   81 tipos: TIPOS
   82      | LISTADE TIPOS


Terminals, with rules where they appear

$end (0) 0
error (256) 18 30 79
PRINCIPAL (258) 2
LLAVEIZQ (259) 3
LLAVEDER (260) 4 5
COMA (261) 6 8 10 21 22 27 48 50 57
LISTADE (262) 82
PROCEDIMIENTO (263) 26
PARDER (264) 2 27 28 29 37 45 55 56 59
PARIZQ (265) 2 27 28 29 37 45 54 59
CORCHIZQ (266) 80
CORCHDER (267) 80
IGUAL (268) 8 9 10 11 20 22 44
INICIOVAR (269) 13
FINVAR (270) 13
SI (271) 45
MIENTRAS (272) 37
OTROCASO (273) 47
PARA (274) 33
HASTA (275) 33
ITERANDO (276) 38
HACER (277) 38
LEER (278) 39
IMPRIMIR (279) 40
CADENA (280) 53
ID (281) 12 19 20 21 22 26 44 48 49 54 76
PYC (282) 17 39 40 42 43 44 55 56
TIPOS (283) 81 82
CONSTANTE (284) 8 9 78
ELEM_POSI_BINA (285)
OR (286) 72
AND (287) 73
XOR (288) 74
IGUALDAD (289) 70
RELACION (290) 71
ADITIVOS (291) 64 65
MULTIPLICATIVOS (292) 68
POTENCIAS (293) 69
NOT (294) 62
UNARIOS (295)
DECRE_PRE (296) 60 66
INCRE_PRE (297) 61 75
UNARIO_PRE_LISTA (298) 63
ELEM_POSI (299) 67 75
MOV_LISTA (300) 42
DOLLAR (301) 43


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
programa (48)
    on left: 1, on right: 0
cabecera_programa (49)
    on left: 2, on right: 1
inicio_bloque (50)
    on left: 3, on right: 4 5
bloque (51)
    on left: 4 5, on right: 1 25 34
lista_parametros (52)
    on left: 6 7, on right: 6 27 28
lista_para_por_defecto (53)
    on left: 8 9 10 11, on right: 8 10 27
parametro (54)
    on left: 12, on right: 6 7 8 9 10 11
declar_de_variables_locales (55)
    on left: 13 14, on right: 4 5
variables_locales (56)
    on left: 15 16, on right: 13 15
cuerpo_declar_variables (57)
    on left: 17 18, on right: 15 16
declar_variables (58)
    on left: 19 20 21 22, on right: 17 21 22
declar_procedimientos (59)
    on left: 23 24, on right: 4 23
declar_proced (60)
    on left: 25, on right: 23 24
inicio_cabe_proced (61)
    on left: 26, on right: 27 28 29
cabecera_proced (62)
    on left: 27 28 29 30, on right: 25
sentencias (63)
    on left: 31 32, on right: 4 5 31
cabecera_for (64)
    on left: 33, on right: 38
sentencia (65)
    on left: 34 35 36 37 38 39 40 41 42 43, on right: 31 32 37 38 46
    47
sentencia_asignacion (66)
    on left: 44, on right: 33 35
cabecera_if (67)
    on left: 45, on right: 46 47
sentencia_if (68)
    on left: 46 47, on right: 36
lista_identificadores (69)
    on left: 48 49, on right: 39 48
mensajes (70)
    on left: 50 51, on right: 40 50
mensaje (71)
    on left: 52 53, on right: 50 51
inicio_llamada (72)
    on left: 54, on right: 55 56
llamada_proced (73)
    on left: 55 56, on right: 41
lista_expresiones (74)
    on left: 57 58, on right: 55 57 80
expresion (75)
    on left: 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76
    77 78 79, on right: 20 22 33 37 38 42 43 44 45 52 57 58 59 60 61
    62 63 64 65 66 67 68 69 70 71 72 73 74 75
agregado_lista (76)
    on left: 80, on right: 10 11 77
tipos (77)
    on left: 81 82, on right: 12 17


state 0

    0 $accept: . programa $end

    PRINCIPAL  shift, and go to state 1

    programa           go to state 2
    cabecera_programa  go to state 3


state 1

    2 cabecera_programa: PRINCIPAL . PARIZQ PARDER

    PARIZQ  shift, and go to state 4


state 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


state 3

    1 programa: cabecera_programa . bloque

    LLAVEIZQ  shift, and go to state 6

    inicio_bloque  go to state 7
    bloque         go to state 8


state 4

    2 cabecera_programa: PRINCIPAL PARIZQ . PARDER

    PARDER  shift, and go to state 9


state 5

    0 $accept: programa $end .

    $default  accept


state 6

    3 inicio_bloque: LLAVEIZQ .

    $default  reduce using rule 3 (inicio_bloque)


state 7

    4 bloque: inicio_bloque . declar_de_variables_locales declar_procedimientos sentencias LLAVEDER
    5       | inicio_bloque . declar_de_variables_locales sentencias LLAVEDER

    INICIOVAR  shift, and go to state 10

    $default  reduce using rule 14 (declar_de_variables_locales)

    declar_de_variables_locales  go to state 11


state 8

    1 programa: cabecera_programa bloque .

    $default  reduce using rule 1 (programa)


state 9

    2 cabecera_programa: PRINCIPAL PARIZQ PARDER .

    $default  reduce using rule 2 (cabecera_programa)


state 10

   13 declar_de_variables_locales: INICIOVAR . variables_locales FINVAR

    error    shift, and go to state 12
    LISTADE  shift, and go to state 13
    TIPOS    shift, and go to state 14

    variables_locales        go to state 15
    cuerpo_declar_variables  go to state 16
    tipos                    go to state 17


state 11

    4 bloque: inicio_bloque declar_de_variables_locales . declar_procedimientos sentencias LLAVEDER
    5       | inicio_bloque declar_de_variables_locales . sentencias LLAVEDER

    error             shift, and go to state 18
    LLAVEIZQ          shift, and go to state 6
    PROCEDIMIENTO     shift, and go to state 19
    PARIZQ            shift, and go to state 20
    CORCHIZQ          shift, and go to state 21
    SI                shift, and go to state 22
    MIENTRAS          shift, and go to state 23
    PARA              shift, and go to state 24
    LEER              shift, and go to state 25
    IMPRIMIR          shift, and go to state 26
    ID                shift, and go to state 27
    CONSTANTE         shift, and go to state 28
    ADITIVOS          shift, and go to state 29
    NOT               shift, and go to state 30
    DECRE_PRE         shift, and go to state 31
    INCRE_PRE         shift, and go to state 32
    UNARIO_PRE_LISTA  shift, and go to state 33
    DOLLAR            shift, and go to state 34

    inicio_bloque          go to state 7
    bloque                 go to state 35
    declar_procedimientos  go to state 36
    declar_proced          go to state 37
    inicio_cabe_proced     go to state 38
    cabecera_proced        go to state 39
    sentencias             go to state 40
    cabecera_for           go to state 41
    sentencia              go to state 42
    sentencia_asignacion   go to state 43
    cabecera_if            go to state 44
    sentencia_if           go to state 45
    inicio_llamada         go to state 46
    llamada_proced         go to state 47
    expresion              go to state 48
    agregado_lista         go to state 49


state 12

   18 cuerpo_declar_variables: error .

    $default  reduce using rule 18 (cuerpo_declar_variables)


state 13

   82 tipos: LISTADE . TIPOS

    TIPOS  shift, and go to state 50


state 14

   81 tipos: TIPOS .

    $default  reduce using rule 81 (tipos)


state 15

   13 declar_de_variables_locales: INICIOVAR variables_locales . FINVAR
   15 variables_locales: variables_locales . cuerpo_declar_variables

    error    shift, and go to state 12
    LISTADE  shift, and go to state 13
    FINVAR   shift, and go to state 51
    TIPOS    shift, and go to state 14

    cuerpo_declar_variables  go to state 52
    tipos                    go to state 17


state 16

   16 variables_locales: cuerpo_declar_variables .

    $default  reduce using rule 16 (variables_locales)


state 17

   17 cuerpo_declar_variables: tipos . declar_variables PYC

    ID  shift, and go to state 53

    declar_variables  go to state 54


state 18

   30 cabecera_proced: error .
   79 expresion: error .

    LLAVEIZQ  reduce using rule 30 (cabecera_proced)
    $default  reduce using rule 79 (expresion)


state 19

   26 inicio_cabe_proced: PROCEDIMIENTO . ID

    ID  shift, and go to state 55


state 20

   59 expresion: PARIZQ . expresion PARDER

    error             shift, and go to state 56
    PARIZQ            shift, and go to state 20
    CORCHIZQ          shift, and go to state 21
    ID                shift, and go to state 57
    CONSTANTE         shift, and go to state 28
    ADITIVOS          shift, and go to state 29
    NOT               shift, and go to state 30
    DECRE_PRE         shift, and go to state 31
    INCRE_PRE         shift, and go to state 32
    UNARIO_PRE_LISTA  shift, and go to state 33

    expresion       go to state 58
    agregado_lista  go to state 49


state 21

   80 agregado_lista: CORCHIZQ . lista_expresiones CORCHDER

    error             shift, and go to state 56
    PARIZQ            shift, and go to state 20
    CORCHIZQ          shift, and go to state 21
    ID                shift, and go to state 57
    CONSTANTE         shift, and go to state 28
    ADITIVOS          shift, and go to state 29
    NOT               shift, and go to state 30
    DECRE_PRE         shift, and go to state 31
    INCRE_PRE         shift, and go to state 32
    UNARIO_PRE_LISTA  shift, and go to state 33

    lista_expresiones  go to state 59
    expresion          go to state 60
    agregado_lista     go to state 49


state 22

   45 cabecera_if: SI . PARIZQ expresion PARDER

    PARIZQ  shift, and go to state 61


state 23

   37 sentencia: MIENTRAS . PARIZQ expresion PARDER sentencia

    PARIZQ  shift, and go to state 62


state 24

   33 cabecera_for: PARA . sentencia_asignacion HASTA expresion

    ID  shift, and go to state 63

    sentencia_asignacion  go to state 64


state 25

   39 sentencia: LEER . lista_identificadores PYC

    ID  shift, and go to state 65

    lista_identificadores  go to state 66


state 26

   40 sentencia: IMPRIMIR . mensajes PYC

    error             shift, and go to state 56
    PARIZQ            shift, and go to state 20
    CORCHIZQ          shift, and go to state 21
    CADENA            shift, and go to state 67
    ID                shift, and go to state 57
    CONSTANTE         shift, and go to state 28
    ADITIVOS          shift, and go to state 29
    NOT               shift, and go to state 30
    DECRE_PRE         shift, and go to state 31
    INCRE_PRE         shift, and go to state 32
    UNARIO_PRE_LISTA  shift, and go to state 33

    mensajes        go to state 68
    mensaje         go to state 69
    expresion       go to state 70
    agregado_lista  go to state 49


state 27

   44 sentencia_asignacion: ID . IGUAL expresion PYC
   54 inicio_llamada: ID . PARIZQ
   76 expresion: ID .

    PARIZQ  shift, and go to state 71
    IGUAL   shift, and go to state 72

    $default  reduce using rule 76 (expresion)


state 28

   78 expresion: CONSTANTE .

    $default  reduce using rule 78 (expresion)


state 29

   64 expresion: ADITIVOS . expresion

    error             shift, and go to state 56
    PARIZQ            shift, and go to state 20
    CORCHIZQ          shift, and go to state 21
    ID                shift, and go to state 57
    CONSTANTE         shift, and go to state 28
    ADITIVOS          shift, and go to state 29
    NOT               shift, and go to state 30
    DECRE_PRE         shift, and go to state 31
    INCRE_PRE         shift, and go to state 32
    UNARIO_PRE_LISTA  shift, and go to state 33

    expresion       go to state 73
    agregado_lista  go to state 49


state 30

   62 expresion: NOT . expresion

    error             shift, and go to state 56
    PARIZQ            shift, and go to state 20
    CORCHIZQ          shift, and go to state 21
    ID                shift, and go to state 57
    CONSTANTE         shift, and go to state 28
    ADITIVOS          shift, and go to state 29
    NOT               shift, and go to state 30
    DECRE_PRE         shift, and go to state 31
    INCRE_PRE         shift, and go to state 32
    UNARIO_PRE_LISTA  shift, and go to state 33

    expresion       go to state 74
    agregado_lista  go to state 49


state 31

   60 expresion: DECRE_PRE . expresion

    error             shift, and go to state 56
    PARIZQ            shift, and go to state 20
    CORCHIZQ          shift, and go to state 21
    ID                shift, and go to state 57
    CONSTANTE         shift, and go to state 28
    ADITIVOS          shift, and go to state 29
    NOT               shift, and go to state 30
    DECRE_PRE         shift, and go to state 31
    INCRE_PRE         shift, and go to state 32
    UNARIO_PRE_LISTA  shift, and go to state 33

    expresion       go to state 75
    agregado_lista  go to state 49


state 32

   61 expresion: INCRE_PRE . expresion

    error             shift, and go to state 56
    PARIZQ            shift, and go to state 20
    CORCHIZQ          shift, and go to state 21
    ID                shift, and go to state 57
    CONSTANTE         shift, and go to state 28
    ADITIVOS          shift, and go to state 29
    NOT               shift, and go to state 30
    DECRE_PRE         shift, and go to state 31
    INCRE_PRE         shift, and go to state 32
    UNARIO_PRE_LISTA  shift, and go to state 33

    expresion       go to state 76
    agregado_lista  go to state 49


state 33

   63 expresion: UNARIO_PRE_LISTA . expresion

    error             shift, and go to state 56
    PARIZQ            shift, and go to state 20
    CORCHIZQ          shift, and go to state 21
    ID                shift, and go to state 57
    CONSTANTE         shift, and go to state 28
    ADITIVOS          shift, and go to state 29
    NOT               shift, and go to state 30
    DECRE_PRE         shift, and go to state 31
    INCRE_PRE         shift, and go to state 32
    UNARIO_PRE_LISTA  shift, and go to state 33

    expresion       go to state 77
    agregado_lista  go to state 49


state 34

   43 sentencia: DOLLAR . expresion PYC

    error             shift, and go to state 56
    PARIZQ            shift, and go to state 20
    CORCHIZQ          shift, and go to state 21
    ID                shift, and go to state 57
    CONSTANTE         shift, and go to state 28
    ADITIVOS          shift, and go to state 29
    NOT               shift, and go to state 30
    DECRE_PRE         shift, and go to state 31
    INCRE_PRE         shift, and go to state 32
    UNARIO_PRE_LISTA  shift, and go to state 33

    expresion       go to state 78
    agregado_lista  go to state 49


state 35

   34 sentencia: bloque .

    $default  reduce using rule 34 (sentencia)


state 36

    4 bloque: inicio_bloque declar_de_variables_locales declar_procedimientos . sentencias LLAVEDER
   23 declar_procedimientos: declar_procedimientos . declar_proced

    error             shift, and go to state 18
    LLAVEIZQ          shift, and go to state 6
    PROCEDIMIENTO     shift, and go to state 19
    PARIZQ            shift, and go to state 20
    CORCHIZQ          shift, and go to state 21
    SI                shift, and go to state 22
    MIENTRAS          shift, and go to state 23
    PARA              shift, and go to state 24
    LEER              shift, and go to state 25
    IMPRIMIR          shift, and go to state 26
    ID                shift, and go to state 27
    CONSTANTE         shift, and go to state 28
    ADITIVOS          shift, and go to state 29
    NOT               shift, and go to state 30
    DECRE_PRE         shift, and go to state 31
    INCRE_PRE         shift, and go to state 32
    UNARIO_PRE_LISTA  shift, and go to state 33
    DOLLAR            shift, and go to state 34

    inicio_bloque         go to state 7
    bloque                go to state 35
    declar_proced         go to state 79
    inicio_cabe_proced    go to state 38
    cabecera_proced       go to state 39
    sentencias            go to state 80
    cabecera_for          go to state 41
    sentencia             go to state 42
    sentencia_asignacion  go to state 43
    cabecera_if           go to state 44
    sentencia_if          go to state 45
    inicio_llamada        go to state 46
    llamada_proced        go to state 47
    expresion             go to state 48
    agregado_lista        go to state 49


state 37

   24 declar_procedimientos: declar_proced .

    $default  reduce using rule 24 (declar_procedimientos)


state 38

   27 cabecera_proced: inicio_cabe_proced . PARIZQ lista_parametros COMA lista_para_por_defecto PARDER
   28                | inicio_cabe_proced . PARIZQ lista_parametros PARDER
   29                | inicio_cabe_proced . PARIZQ PARDER

    PARIZQ  shift, and go to state 81


state 39

   25 declar_proced: cabecera_proced . bloque

    LLAVEIZQ  shift, and go to state 6

    inicio_bloque  go to state 7
    bloque         go to state 82


state 40

    5 bloque: inicio_bloque declar_de_variables_locales sentencias . LLAVEDER
   31 sentencias: sentencias . sentencia

    error             shift, and go to state 56
    LLAVEIZQ          shift, and go to state 6
    LLAVEDER          shift, and go to state 83
    PARIZQ            shift, and go to state 20
    CORCHIZQ          shift, and go to state 21
    SI                shift, and go to state 22
    MIENTRAS          shift, and go to state 23
    PARA              shift, and go to state 24
    LEER              shift, and go to state 25
    IMPRIMIR          shift, and go to state 26
    ID                shift, and go to state 27
    CONSTANTE         shift, and go to state 28
    ADITIVOS          shift, and go to state 29
    NOT               shift, and go to state 30
    DECRE_PRE         shift, and go to state 31
    INCRE_PRE         shift, and go to state 32
    UNARIO_PRE_LISTA  shift, and go to state 33
    DOLLAR            shift, and go to state 34

    inicio_bloque         go to state 7
    bloque                go to state 35
    cabecera_for          go to state 41
    sentencia             go to state 84
    sentencia_asignacion  go to state 43
    cabecera_if           go to state 44
    sentencia_if          go to state 45
    inicio_llamada        go to state 46
    llamada_proced        go to state 47
    expresion             go to state 48
    agregado_lista        go to state 49


state 41

   38 sentencia: cabecera_for . ITERANDO expresion HACER sentencia

    ITERANDO  shift, and go to state 85


state 42

   32 sentencias: sentencia .

    $default  reduce using rule 32 (sentencias)


state 43

   35 sentencia: sentencia_asignacion .

    $default  reduce using rule 35 (sentencia)


state 44

   46 sentencia_if: cabecera_if . sentencia
   47             | cabecera_if . sentencia OTROCASO sentencia

    error             shift, and go to state 56
    LLAVEIZQ          shift, and go to state 6
    PARIZQ            shift, and go to state 20
    CORCHIZQ          shift, and go to state 21
    SI                shift, and go to state 22
    MIENTRAS          shift, and go to state 23
    PARA              shift, and go to state 24
    LEER              shift, and go to state 25
    IMPRIMIR          shift, and go to state 26
    ID                shift, and go to state 27
    CONSTANTE         shift, and go to state 28
    ADITIVOS          shift, and go to state 29
    NOT               shift, and go to state 30
    DECRE_PRE         shift, and go to state 31
    INCRE_PRE         shift, and go to state 32
    UNARIO_PRE_LISTA  shift, and go to state 33
    DOLLAR            shift, and go to state 34

    inicio_bloque         go to state 7
    bloque                go to state 35
    cabecera_for          go to state 41
    sentencia             go to state 86
    sentencia_asignacion  go to state 43
    cabecera_if           go to state 44
    sentencia_if          go to state 45
    inicio_llamada        go to state 46
    llamada_proced        go to state 47
    expresion             go to state 48
    agregado_lista        go to state 49


state 45

   36 sentencia: sentencia_if .

    $default  reduce using rule 36 (sentencia)


state 46

   55 llamada_proced: inicio_llamada . lista_expresiones PARDER PYC
   56               | inicio_llamada . PARDER PYC

    error             shift, and go to state 56
    PARDER            shift, and go to state 87
    PARIZQ            shift, and go to state 20
    CORCHIZQ          shift, and go to state 21
    ID                shift, and go to state 57
    CONSTANTE         shift, and go to state 28
    ADITIVOS          shift, and go to state 29
    NOT               shift, and go to state 30
    DECRE_PRE         shift, and go to state 31
    INCRE_PRE         shift, and go to state 32
    UNARIO_PRE_LISTA  shift, and go to state 33

    lista_expresiones  go to state 88
    expresion          go to state 60
    agregado_lista     go to state 49


state 47

   41 sentencia: llamada_proced .

    $default  reduce using rule 41 (sentencia)


state 48

   42 sentencia: expresion . MOV_LISTA PYC
   65 expresion: expresion . ADITIVOS expresion
   66          | expresion . DECRE_PRE expresion
   67          | expresion . ELEM_POSI expresion
   68          | expresion . MULTIPLICATIVOS expresion
   69          | expresion . POTENCIAS expresion
   70          | expresion . IGUALDAD expresion
   71          | expresion . RELACION expresion
   72          | expresion . OR expresion
   73          | expresion . AND expresion
   74          | expresion . XOR expresion
   75          | expresion . INCRE_PRE expresion ELEM_POSI expresion

    OR               shift, and go to state 89
    AND              shift, and go to state 90
    XOR              shift, and go to state 91
    IGUALDAD         shift, and go to state 92
    RELACION         shift, and go to state 93
    ADITIVOS         shift, and go to state 94
    MULTIPLICATIVOS  shift, and go to state 95
    POTENCIAS        shift, and go to state 96
    DECRE_PRE        shift, and go to state 97
    INCRE_PRE        shift, and go to state 98
    ELEM_POSI        shift, and go to state 99
    MOV_LISTA        shift, and go to state 100


state 49

   77 expresion: agregado_lista .

    $default  reduce using rule 77 (expresion)


state 50

   82 tipos: LISTADE TIPOS .

    $default  reduce using rule 82 (tipos)


state 51

   13 declar_de_variables_locales: INICIOVAR variables_locales FINVAR .

    $default  reduce using rule 13 (declar_de_variables_locales)


state 52

   15 variables_locales: variables_locales cuerpo_declar_variables .

    $default  reduce using rule 15 (variables_locales)


state 53

   19 declar_variables: ID .
   20                 | ID . IGUAL expresion

    IGUAL  shift, and go to state 101

    $default  reduce using rule 19 (declar_variables)


state 54

   17 cuerpo_declar_variables: tipos declar_variables . PYC
   21 declar_variables: declar_variables . COMA ID
   22                 | declar_variables . COMA ID IGUAL expresion

    COMA  shift, and go to state 102
    PYC   shift, and go to state 103


state 55

   26 inicio_cabe_proced: PROCEDIMIENTO ID .

    $default  reduce using rule 26 (inicio_cabe_proced)


state 56

   79 expresion: error .

    $default  reduce using rule 79 (expresion)


state 57

   76 expresion: ID .

    $default  reduce using rule 76 (expresion)


state 58

   59 expresion: PARIZQ expresion . PARDER
   65          | expresion . ADITIVOS expresion
   66          | expresion . DECRE_PRE expresion
   67          | expresion . ELEM_POSI expresion
   68          | expresion . MULTIPLICATIVOS expresion
   69          | expresion . POTENCIAS expresion
   70          | expresion . IGUALDAD expresion
   71          | expresion . RELACION expresion
   72          | expresion . OR expresion
   73          | expresion . AND expresion
   74          | expresion . XOR expresion
   75          | expresion . INCRE_PRE expresion ELEM_POSI expresion

    PARDER           shift, and go to state 104
    OR               shift, and go to state 89
    AND              shift, and go to state 90
    XOR              shift, and go to state 91
    IGUALDAD         shift, and go to state 92
    RELACION         shift, and go to state 93
    ADITIVOS         shift, and go to state 94
    MULTIPLICATIVOS  shift, and go to state 95
    POTENCIAS        shift, and go to state 96
    DECRE_PRE        shift, and go to state 97
    INCRE_PRE        shift, and go to state 98
    ELEM_POSI        shift, and go to state 99


state 59

   57 lista_expresiones: lista_expresiones . COMA expresion
   80 agregado_lista: CORCHIZQ lista_expresiones . CORCHDER

    COMA      shift, and go to state 105
    CORCHDER  shift, and go to state 106


state 60

   58 lista_expresiones: expresion .
   65 expresion: expresion . ADITIVOS expresion
   66          | expresion . DECRE_PRE expresion
   67          | expresion . ELEM_POSI expresion
   68          | expresion . MULTIPLICATIVOS expresion
   69          | expresion . POTENCIAS expresion
   70          | expresion . IGUALDAD expresion
   71          | expresion . RELACION expresion
   72          | expresion . OR expresion
   73          | expresion . AND expresion
   74          | expresion . XOR expresion
   75          | expresion . INCRE_PRE expresion ELEM_POSI expresion

    OR               shift, and go to state 89
    AND              shift, and go to state 90
    XOR              shift, and go to state 91
    IGUALDAD         shift, and go to state 92
    RELACION         shift, and go to state 93
    ADITIVOS         shift, and go to state 94
    MULTIPLICATIVOS  shift, and go to state 95
    POTENCIAS        shift, and go to state 96
    DECRE_PRE        shift, and go to state 97
    INCRE_PRE        shift, and go to state 98
    ELEM_POSI        shift, and go to state 99

    $default  reduce using rule 58 (lista_expresiones)


state 61

   45 cabecera_if: SI PARIZQ . expresion PARDER

    error             shift, and go to state 56
    PARIZQ            shift, and go to state 20
    CORCHIZQ          shift, and go to state 21
    ID                shift, and go to state 57
    CONSTANTE         shift, and go to state 28
    ADITIVOS          shift, and go to state 29
    NOT               shift, and go to state 30
    DECRE_PRE         shift, and go to state 31
    INCRE_PRE         shift, and go to state 32
    UNARIO_PRE_LISTA  shift, and go to state 33

    expresion       go to state 107
    agregado_lista  go to state 49


state 62

   37 sentencia: MIENTRAS PARIZQ . expresion PARDER sentencia

    error             shift, and go to state 56
    PARIZQ            shift, and go to state 20
    CORCHIZQ          shift, and go to state 21
    ID                shift, and go to state 57
    CONSTANTE         shift, and go to state 28
    ADITIVOS          shift, and go to state 29
    NOT               shift, and go to state 30
    DECRE_PRE         shift, and go to state 31
    INCRE_PRE         shift, and go to state 32
    UNARIO_PRE_LISTA  shift, and go to state 33

    expresion       go to state 108
    agregado_lista  go to state 49


state 63

   44 sentencia_asignacion: ID . IGUAL expresion PYC

    IGUAL  shift, and go to state 72


state 64

   33 cabecera_for: PARA sentencia_asignacion . HASTA expresion

    HASTA  shift, and go to state 109


state 65

   49 lista_identificadores: ID .

    $default  reduce using rule 49 (lista_identificadores)


state 66

   39 sentencia: LEER lista_identificadores . PYC
   48 lista_identificadores: lista_identificadores . COMA ID

    COMA  shift, and go to state 110
    PYC   shift, and go to state 111


state 67

   53 mensaje: CADENA .

    $default  reduce using rule 53 (mensaje)


state 68

   40 sentencia: IMPRIMIR mensajes . PYC
   50 mensajes: mensajes . COMA mensaje

    COMA  shift, and go to state 112
    PYC   shift, and go to state 113


state 69

   51 mensajes: mensaje .

    $default  reduce using rule 51 (mensajes)


state 70

   52 mensaje: expresion .
   65 expresion: expresion . ADITIVOS expresion
   66          | expresion . DECRE_PRE expresion
   67          | expresion . ELEM_POSI expresion
   68          | expresion . MULTIPLICATIVOS expresion
   69          | expresion . POTENCIAS expresion
   70          | expresion . IGUALDAD expresion
   71          | expresion . RELACION expresion
   72          | expresion . OR expresion
   73          | expresion . AND expresion
   74          | expresion . XOR expresion
   75          | expresion . INCRE_PRE expresion ELEM_POSI expresion

    OR               shift, and go to state 89
    AND              shift, and go to state 90
    XOR              shift, and go to state 91
    IGUALDAD         shift, and go to state 92
    RELACION         shift, and go to state 93
    ADITIVOS         shift, and go to state 94
    MULTIPLICATIVOS  shift, and go to state 95
    POTENCIAS        shift, and go to state 96
    DECRE_PRE        shift, and go to state 97
    INCRE_PRE        shift, and go to state 98
    ELEM_POSI        shift, and go to state 99

    $default  reduce using rule 52 (mensaje)


state 71

   54 inicio_llamada: ID PARIZQ .

    $default  reduce using rule 54 (inicio_llamada)


state 72

   44 sentencia_asignacion: ID IGUAL . expresion PYC

    error             shift, and go to state 56
    PARIZQ            shift, and go to state 20
    CORCHIZQ          shift, and go to state 21
    ID                shift, and go to state 57
    CONSTANTE         shift, and go to state 28
    ADITIVOS          shift, and go to state 29
    NOT               shift, and go to state 30
    DECRE_PRE         shift, and go to state 31
    INCRE_PRE         shift, and go to state 32
    UNARIO_PRE_LISTA  shift, and go to state 33

    expresion       go to state 114
    agregado_lista  go to state 49


state 73

   64 expresion: ADITIVOS expresion .
   65          | expresion . ADITIVOS expresion
   66          | expresion . DECRE_PRE expresion
   67          | expresion . ELEM_POSI expresion
   68          | expresion . MULTIPLICATIVOS expresion
   69          | expresion . POTENCIAS expresion
   70          | expresion . IGUALDAD expresion
   71          | expresion . RELACION expresion
   72          | expresion . OR expresion
   73          | expresion . AND expresion
   74          | expresion . XOR expresion
   75          | expresion . INCRE_PRE expresion ELEM_POSI expresion

    DECRE_PRE  shift, and go to state 97
    INCRE_PRE  shift, and go to state 98
    ELEM_POSI  shift, and go to state 99

    $default  reduce using rule 64 (expresion)


state 74

   62 expresion: NOT expresion .
   65          | expresion . ADITIVOS expresion
   66          | expresion . DECRE_PRE expresion
   67          | expresion . ELEM_POSI expresion
   68          | expresion . MULTIPLICATIVOS expresion
   69          | expresion . POTENCIAS expresion
   70          | expresion . IGUALDAD expresion
   71          | expresion . RELACION expresion
   72          | expresion . OR expresion
   73          | expresion . AND expresion
   74          | expresion . XOR expresion
   75          | expresion . INCRE_PRE expresion ELEM_POSI expresion

    DECRE_PRE  shift, and go to state 97
    INCRE_PRE  shift, and go to state 98
    ELEM_POSI  shift, and go to state 99

    $default  reduce using rule 62 (expresion)


state 75

   60 expresion: DECRE_PRE expresion .
   65          | expresion . ADITIVOS expresion
   66          | expresion . DECRE_PRE expresion
   67          | expresion . ELEM_POSI expresion
   68          | expresion . MULTIPLICATIVOS expresion
   69          | expresion . POTENCIAS expresion
   70          | expresion . IGUALDAD expresion
   71          | expresion . RELACION expresion
   72          | expresion . OR expresion
   73          | expresion . AND expresion
   74          | expresion . XOR expresion
   75          | expresion . INCRE_PRE expresion ELEM_POSI expresion

    DECRE_PRE  shift, and go to state 97
    INCRE_PRE  shift, and go to state 98
    ELEM_POSI  shift, and go to state 99

    $default  reduce using rule 60 (expresion)


state 76
